[bugfix] removed page vertical size restriction to prevent links from being cut off

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,13 +15,8 @@
 
 .full-page {
     height: 100vh;
-    padding-top: 50px;
 }
 
 .half-page {
     height: 50vh;
-}
-
-.large-page {
-    height: 65vh;
 }
