--- a/src/app/pages/accomodations/accomodations.component.scss
+++ b/src/app/pages/accomodations/accomodations.component.scss
@@ -1,7 +1,3 @@
-:host {
-    // justify-content: center;
-}
-
 .container {
     display: flex;
     flex-direction: column;
